Push the apache served cloud-init files down a level.

--- a/config/apache/cobbler.conf
+++ b/config/apache/cobbler.conf
@@ -3,6 +3,7 @@
     AliasMatch ^/cblr(?!/svc/)(.*)?$ "@@webroot@@/cobbler$1"
     AliasMatch ^/cobbler_track(.*)?$ "@@webroot@@/cobbler$1"
     Alias /cobbler @@webroot@@/cobbler
+    Alias /cobbler-html @@webroot@@/cobbler-html
 
     Alias /httpboot @@tftproot@@/grub
     Alias /images @@tftproot@@/grub/images
